[package]
name = "turboflight"
description = "A simple single-flight implementation for heavy concurrency."
version = "1.0.1"
edition = "2024"
readme = "README.md"
license = "MIT"
repository = "https://github.com/nekidev/turboflight"
authors = ["Nyeki"]

[dependencies]
scc = "3.3.2"
tokio = { version = "1.48.0", features = ["sync"], default-features = false }

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
