[package]
name = "turboflight"
description = "A simple, concurrent single-flight implementation."
version = "2.3.1"
edition = "2024"
readme = "README.md"
license = "MIT"
repository = "https://github.com/nekidev/turboflight"
authors = ["Nyeki"]

[dependencies]
papaya = "0.2.3"
tokio = { version = "1.48.0", features = ["sync"], default-features = false }

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
